--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -6,37 +6,45 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarsExample">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="/admin"><%= t('dashboard') %></a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/mahasiswa"><%= t('students') %></a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin/users"><%= t('nav.users') %></a></li>
-      <li class="nav-item"><a class="nav-link" href="/admin/roles"><%= t('nav.roles') %></a></li>
-      <li class="nav-item"><a class="nav-link" href="/admin/payments"><%= t('nav.payments') %></a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin">
+            <%= t('nav.home') %>
+          </a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/mahasiswa">
+            <%= t('students') %>
+          </a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/users">
+            <%= t('nav.users') %>
+          </a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/roles">
+            <%= t('nav.roles') %>
+          </a></li>
+        <li class="nav-item"><a class="nav-link" href="/admin/payments">
+            <%= t('nav.payments') %>
+          </a></li>
       </ul>
-          </ul>
+      </ul>
       <form method="post" action="/admin/logout" class="ms-auto">
-        <button class="btn btn-outline-danger btn-sm" type="submit"><%= t('nav.logout') %></button>
+        <button class="btn btn-outline-danger btn-sm" type="submit">
+          <%= t('nav.logout') %>
+        </button>
       </form>
-    
-    <%
-// Build lang URLs preserving existing query params
-const cur = (typeof url !== 'undefined' ? url : '/');
-const parts = cur.split('?');
-const pathOnly = parts[0];
-const qs = new URLSearchParams(parts[1] || '');
-function langHref(code){ qs.set('lang', code); return pathOnly + '?' + qs.toString(); }
-const curLng = (typeof lng !== 'undefined' && lng) ? String(lng) : 'en';
-    %>
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="bi bi-translate"></i> <span class="text-uppercase"><%= curLng %></span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li><a class="dropdown-item" href="<%= langHref('en') %>">English</a></li>
-          <li><a class="dropdown-item" href="<%= langHref('id') %>">Indonesia</a></li>
-        </ul>
-      </li>
-    </ul>
 
-  </div>
+      <% const cur=(typeof url !=='undefined' ? url : '/' ); const parts=cur.split('?'); const pathOnly=parts[0]; const
+        qs=new URLSearchParams(parts[1] || '' ); function langHref(code){ qs.set('lang', code); return pathOnly + '?' +
+        qs.toString(); } const curLng=(typeof lng !=='undefined' && lng) ? String(lng) : 'en' ; %>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-translate"></i> <span class="text-uppercase">
+                <%= curLng %>
+              </span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="<%= langHref('en') %>">English</a></li>
+              <li><a class="dropdown-item" href="<%= langHref('id') %>">Indonesia</a></li>
+            </ul>
+          </li>
+        </ul>
+
+    </div>
 </nav>
