--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
-    <a class="navbar-brand" href="/admin">Admin</a>
+    <a class="navbar-brand" href="/admin">Anam Techno</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,7 +38,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-translate"></i> <span class="text-uppercase">
-              <%= curLng %>
+              <%= session.lang %>
             </span>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
